[package]
edition = "2018"
name = "rust_jsx_ui"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
image = "0.23"
# winit = "0.25"
winit = { git="https://github.com/nmpribeiro/winit.git", branch="working_android_winit"}
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.9"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2.1"
ndk-glue = { version = "0.2.1", features = [ "logger" ] }
android_logger = "0.9.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.7"

[package.metadata.android]
apk_label = "learn-wgpu"
target_sdk_version = 29
min_sdk_version = 26
fullscreen = false
launch_mode = "singleTask"
# build_targets = ["aarch64-linux-android"]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.level"
version = "1"

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.version"
version = "4198400" # v1.1 = 0x00401000

# Docs: https://lib.rs/crates/cargo-quad-apk

[lib]
crate-type = ["staticlib", "lib", "cdylib"]

[profiles.dev]
apple-universal = true

[profiles.release]
apple-universal = true


