[package]
edition = "2018"
name = "ruinx"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"

# sentry: needs it vendored for android
openssl = {version = "0.10.35", features = ["vendored"]}
sentry = "0.23.0"

# our libs
graphics = {path = "./libs/graphics"}
rsx_ui = {path = "./libs/rsx_ui"}
utils = {path = "./libs/utils"}

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.10.1"
ndk-glue = {version = "0.3.0", features = ["logger"]}
ndk-sys = "0.2.1"

[package.metadata.android]
apk_label = "learn-wgpu"
fullscreen = false
launch_mode = "singleTask"
min_sdk_version = 26
target_sdk_version = 29
# build_targets = ["aarch64-linux-android"]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.level"
version = "1"

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.version"
version = "4198400" # v1.1 = 0x00401000

# Docs: https://lib.rs/crates/cargo-quad-apk

[lib]
crate-type = ["staticlib", "lib", "cdylib"]

[profiles.dev]
apple-universal = true

[profiles.release]
apple-universal = true
