[package]
edition = "2021"
name = "conrod_test"
resolver = "2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = {path = "../../github/conrod/conrod_core"}
conrod_example_shared = {path = "../../github/conrod/backends/conrod_example_shared"}
conrod_wgpu = {path = "../../github/conrod/backends/conrod_wgpu"}
conrod_winit = {path = "../../github/conrod/backends/conrod_winit"}
futures = "0.3.17"
image = "0.23.14"
wgpu = "0.11.0"
winit = "0.25.0"

utils = {path = "../utils"}
