[package]
edition = '2021'
name = 'conrod_test'
version = '0.1.0'

[dependencies]
futures = '0.3'
image = '0.23'
winit = '0.25'
rand = '0.8.1'
wgpu = '0.11.0'

[dependencies.conrod_core]
path = '../../github/conrod/conrod_core'

[dependencies.conrod_example_shared]
path = '../../github/conrod/backends/conrod_example_shared'

[dependencies.conrod_wgpu]
path = '../../github/conrod/backends/conrod_wgpu'

[dependencies.conrod_winit]
path = '../../github/conrod/backends/conrod_winit'

[dependencies.utils]
path = '../utils'
