[package]
edition = '2018'
name = 'graphics'
version = '0.1.0'

[dependencies]
futures = '0.3'
log = '0.4'
winit = '0.25.0'
image = '0.23'
wasm-bindgen = '0.2.78'

[dependencies.conrod_core]
path = '../../github/conrod/conrod_core'

[dependencies.conrod_wgpu]
path = '../../github/conrod/backends/conrod_wgpu'

[dependencies.conrod_winit]
path = '../../github/conrod/backends/conrod_winit'

[dependencies.wgpu]
path = '../../github/wgpu/wgpu'

[dependencies.app-events]
path = '../app-events'
