[package]
edition = '2018'
name = 'graphics'
version = '0.1.0'

[dependencies]
futures = '0.3'
log = '0.4'
winit = '0.25.0'
image = '0.23'
wgpu = '0.11.0'
iced_wgpu = '0.4.0'
iced_winit = '0.3.0'

# [dependencies.conrod_core]
# path = '../../github/conrod/conrod_core'

# [dependencies.conrod_wgpu]
# path = '../../github/conrod/backends/conrod_wgpu'

# [dependencies.conrod_winit]
# path = '../../github/conrod/backends/conrod_winit'

[dependencies.conrod_winit.ndk-glue]
version = '0.3.0'
features = ['logger']

[dependencies.app-events]
path = '../app-events'
