[package]
edition = '2018'
name = 'graphics'
version = '0.1.0'
resolver="2"

[dependencies]
# env_logger = '0.9'
futures = '0.3'
log = '0.4'
# image = '0.23'

[dependencies.iced_winit]
path = '../../github/iced/winit'

[dependencies.iced_native]
path = '../../github/iced/native'

[dependencies.iced_wgpu]
path = '../../github/iced/wgpu'
features = ['spirv']

# [dependencies.conrod_core]
# path = '../../github/conrod/conrod_core'

# [dependencies.conrod_wgpu]
# path = '../../github/conrod/backends/conrod_wgpu'

# [dependencies.conrod_winit]
# path = '../../github/conrod/backends/conrod_winit'

[target."cfg(target_os = \"android\")".dependencies.ndk-glue]
version = '0.3.0'
features = ['logger']
