[package]
edition = "2018"
name = "rsx_ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-events = {path = "../app-events"}
dyon = "0.46.0"
futures = "0.3"
graphics = {path = "../graphics"}
rsx-parser = {git = "https://github.com/nmpribeiro/rsx-parser.git"}
rsx_loader = {path = "../rsx_loader"}
utils = {path = "../utils"}
uuid = {version = "0.8", features = ["v4"]}
winit = {git = "https://github.com/nmpribeiro/winit.git", branch = "fix/v25_ios"}

find_folder = "0.3.0"
image = "0.23.14"
rand = "0.8.4"

wgpu = {git = "https://github.com/gfx-rs/wgpu.git"}

conrod_core = {path = "../../github/conrod/conrod_core"}
conrod_derive = {path = "../../github/conrod/conrod_derive"}
conrod_wgpu = {path = "../../github/conrod/backends/conrod_wgpu"}

rusttype = "0.9.2"
