[package]
edition = '2018'
name = 'rsx_ui'
version = '0.1.0'

[dependencies]
dyon = '0.46.0'
futures = '0.3'
winit = '0.25.0'
find_folder = '0.3.0'
image = '0.23.14'
rand = '0.8.4'
rusttype = '0.9.2'
wgpu = '0.11.0'

[dependencies.uuid]
version = '0.8'
features = ['v4']

[dependencies.rsx-parser]
git = 'https://github.com/nmpribeiro/rsx-parser.git'

[dependencies.app-events]
path = '../app-events'

[dependencies.graphics]
path = '../graphics'

[dependencies.rsx_loader]
path = '../rsx_loader'

[dependencies.utils]
path = '../utils'

# [dependencies.conrod_core]
# path = '../../github/conrod/conrod_core'

# [dependencies.conrod_wgpu]
# path = '../../github/conrod/backends/conrod_wgpu'

# [dependencies.conrod_winit]
# path = '../../github/conrod/backends/conrod_winit'

# [dependencies.conrod_derive]
# path = '../../github/conrod/conrod_derive'
