[package]
edition = '2018'
name = 'rsx_ui'
version = '0.1.0'

[dependencies]
dyon = '0.46.0'
futures = '0.3'
find_folder = '0.3.0'
image = '0.23.14'
rand = '0.8.4'
rusttype = '0.9.2'

[dependencies.uuid]
version = '0.8'
features = ['v4']

[dependencies.rsx-parser]
git = 'https://github.com/nmpribeiro/rsx-parser.git'

[dependencies.graphics]
path = '../graphics'

[dependencies.rsx_loader]
path = '../rsx_loader'

[dependencies.utils]
path = '../utils'

[dependencies.iced_winit]
path = '../../github/iced/winit'

[dependencies.iced_wgpu]
path = '../../github/iced/wgpu'

# [dependencies.conrod_core]
# path = '../../github/conrod/conrod_core'

# [dependencies.conrod_wgpu]
# path = '../../github/conrod/backends/conrod_wgpu'

# [dependencies.conrod_winit]
# path = '../../github/conrod/backends/conrod_winit'

# [dependencies.conrod_derive]
# path = '../../github/conrod/conrod_derive'
